# DepSentry

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
npm/: LICENSE  README.md  install.js  package.json
src/: analysis.rs  cli.rs  ecosystem.rs  fetcher.rs  firewall.rs  main.rs  osv.rs  report.rs  snapshot.rs
wix/: License.rtf  main.wxs
