[package]
name = "depsentry"
version = "0.1.1"
edition = "2024"
authors = ["Mikhail Grishak <m.grishak@yandex.ru>"]
description = "A proactive supply chain security tool for Blue Teams"
license = "Apache-2.0"
repository = "https://github.com/Swek09/DepSentry"
readme = "README.md"
keywords = ["security", "supply-chain", "malware", "analysis", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.3", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
entropy = "0.4.1"
tempfile = "3.8"
colored = "2.0"
tabled = "0.15"
walkdir = "2.4"
regex = "1.10"
tar = "0.4"
flate2 = "1.0"
zip = "0.6"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
strsim = "0.10"

[[bin]]
name = "depsentry"
path = "src/main.rs"

[[bin]]
name = "ds"
path = "src/main.rs"